--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
     serialization:
       INDENT_OUTPUT: true
 
+  mvc:
+      view:
+          prefix: /WEB-INF/views/
+          suffix: .jsp
+
   datasource:
     url: jdbc:postgresql://localhost:5432/und
     username: postgres
