--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,14 @@
             <artifactId>standard</artifactId>
             <version>1.1.2</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/javax.el/el-api -->
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>el-api</artifactId>
+            <version>2.2.1-b04</version>
+        </dependency>
+
 
     </dependencies>
 
