--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,21 @@ apply plugin: 'java'
 apply plugin: "kotlin-spring" // See https://kotlinlang.org/docs/reference/compiler-plugins.html#kotlin-spring-compiler-plugin
 apply plugin: 'org.springframework.boot'
 
+apply plugin: "jacoco"
+apply plugin: 'findbugs'
+
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
 
-
+jacocoTestReport {
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.destination file("${buildDir}/reports/jacocoHtml")
+    }
+}
 
 
 ext.kotlinVersion = '1.1.4-3'
@@ -61,10 +70,7 @@ dependencies {
     testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.5.6.RELEASE') {
         exclude(module: 'commons-logging')
         compile(
-
-
                 "org.springframework.boot:spring-boot-starter-web:$springbootVersion",
-
                 "org.springframework.boot:spring-boot-starter-data-jpa:$springbootVersion",
                 "org.springframework.boot:spring-boot-starter-data-rest:$springbootVersion",
                 "org.springframework.boot:spring-boot-starter-mobile:$springbootVersion",
