--- a/build.gradle
+++ b/build.gradle
@@ -127,6 +127,8 @@ dependencies {
 
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
 
+// https://mvnrepository.com/artifact/org.quartz-scheduler/quartz
+    compile "org.quartz-scheduler:quartz:2.3.0"
 
 }
 
