--- a/build.gradle
+++ b/build.gradle
@@ -72,21 +72,21 @@ node
             nodeModulesDir = file("frontend")
         }
 
-task buildClientDev(type: NpmTask, dependsOn: 'npmInstall'){
-            group = 'build'
-            description = 'Compile client side folder for development'
-            args = ['run','buildDev']
-        }
-task buildClient(type:NpmTask, dependsOn:'npmInstall') {
-            group = 'build'
-            description = "Compile client side folder for production"
-            args = ['run','build']
-        }
-task buildClientWatch(type: NpmTask, dependsOn: 'npmInstall'){
-            group = 'application'
-            description = "Build and watches the client side assets for rebuilding"
-            args = ['run','buildWatch']
-        }
+task buildClientDev(type: NpmTask, dependsOn: 'npmInstall') {
+    group = 'build'
+    description = 'Compile client side folder for development'
+    args = ['run', 'buildDev']
+}
+task buildClient(type: NpmTask, dependsOn: 'npmInstall') {
+    group = 'build'
+    description = "Compile client side folder for production"
+    args = ['run', 'build']
+}
+task buildClientWatch(type: NpmTask, dependsOn: 'npmInstall') {
+    group = 'application'
+    description = "Build and watches the client side assets for rebuilding"
+    args = ['run', 'buildWatch']
+}
 
 dependencies {
     testCompile(
@@ -109,7 +109,7 @@ dependencies {
             "org.aspectj:aspectjrt:$aspectjVersion",
             "org.aspectj:aspectjweaver:$aspectjVersion",
             'org.postgresql:postgresql:9.4-1206-jdbc42',
-            'io.jsonwebtoken:jjwt:0.7.0',
+            'io.jsonwebtoken:jjwt:0.9.0',
             'io.springfox:springfox-swagger2:2.7.0',
             'io.springfox:springfox-swagger-ui:2.7.0',
             'com.google.guava:guava:19.0',
@@ -121,13 +121,20 @@ dependencies {
             'javax.el:el-api:2.2.1-b04',
 
     )
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-redis
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-redis', version: '1.4.7.RELEASE'
+    // https://mvnrepository.com/artifact/org.springframework.data/spring-data-redis
+    compile group: 'org.springframework.data', name: 'spring-data-redis', version: '2.0.0.RELEASE'
+
+// https://mvnrepository.com/artifact/redis.clients/jedis
+    compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
+
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
     compile "org.springframework.boot:spring-boot-devtools:$springbootVersion"
     //compile("org.hibernate:hibernate-validator")
 
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
 
-// https://mvnrepository.com/artifact/org.quartz-scheduler/quartz
     compile "org.quartz-scheduler:quartz:2.3.0"
 
 }
