removed some bugs, as suggested by find bug report

--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,15 @@ jacocoTestReport {
         html.destination file("${buildDir}/reports/jacocoHtml")
     }
 }
-
+tasks.withType(FindBugs) {
+    reports {
+        xml.enabled = false
+        html.enabled = true
+        reportLevel = "low"
+        ignoreFailures = true
+        html.destination file("${buildDir}/reports/findBugsHtml")
+    }
+}
 
 ext {
     commonsLangVersion = '3.5'
@@ -50,7 +58,7 @@ ext {
     javaxElVersion = '2.2.1-b04'
     bitWalkerUagentVersion = '1.20'
     kotlinVersion = '1.1.51'
-    springbootVersion = '2.0.0.M4'
+    springbootVersion = '2.0.0.M5'
     aspectjVersion = '1.8.7'
     jsonPathVersion = '2.1.0'
     swaggerVersion = '2.7.0'
@@ -108,11 +116,9 @@ task buildClientWatch(type: NpmTask, dependsOn: 'npmInstall') {
 
 dependencies {
     testCompile(
-            'junit:junit:4.12',
             'org.springframework.security:spring-security-test:4.2.3.RELEASE',
-
     )
-    testCompile "org.mockito:mockito-core:1.+"
+    testCompile 'org.mockito:mockito-core:1.+'
     testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.0.0.M4') {
         exclude(module: 'commons-logging')
     }
@@ -130,8 +136,13 @@ dependencies {
             "io.jsonwebtoken:jjwt:$jjwtVersion",
             "io.springfox:springfox-swagger2:$swaggerVersion",
             "io.springfox:springfox-swagger-ui:$swaggerVersion",
-            "com.google.guava:guava:$gauvaVersion",
-            "org.apache.commons:commons-lang3:$commonsLangVersion",
+            "org.springframework.boot:spring-boot-starter-redis:$bootRedisVersion",
+            "org.springframework.data:spring-data-redis:$dataRedisVersion",
+            "redis.clients:jedis:$jedisVersion",
+            "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion",
+            "org.springframework.boot:spring-boot-devtools:$springbootVersion",
+            "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version",
+            "org.quartz-scheduler:quartz:$quartzVersion",
             "org.flywaydb:flyway-core:$flywayVersion",
             "javax.servlet:jstl:$jstlVersion",
             "jstl:jstl:$jstlVersion",
@@ -139,13 +150,7 @@ dependencies {
             "javax.el:el-api:$javaxElVersion",
 
     )
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-redis', version: "$bootRedisVersion"
-    compile group: 'org.springframework.data', name: 'spring-data-redis', version: "$dataRedisVersion"
-    compile group: 'redis.clients', name: 'jedis', version: "$jedisVersion"
-    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
-    compile "org.springframework.boot:spring-boot-devtools:$springbootVersion"
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
-    compile "org.quartz-scheduler:quartz:$quartzVersion"
+
 
 }
 
