--- a/build.gradle
+++ b/build.gradle
@@ -153,13 +153,20 @@ dependencies {
             "javax.el:el-api:$javaxElVersion",
 
     )
-    compile ("com.und:auth-client:0.2.0-SNAPSHOT")
+    compile ("com.und:auth-client:0.3.0-SNAPSHOT")
     compile('org.springframework.cloud:spring-cloud-starter-config')
     compile('org.springframework.cloud:spring-cloud-config-client')
     compile('org.springframework.cloud:spring-cloud-starter-eureka')
     compile('org.springframework.cloud:spring-cloud-starter-feign')
 
 
+
+    // https://mvnrepository.com/artifact/javax.mail/mail
+    compile group: 'javax.mail', name: 'mail', version: '1.5.0-b01'
+
+    //kafka
+    compile group: 'org.springframework.kafka', name: 'spring-kafka', version: '2.0.0.RELEASE'
+    compile group: 'org.springframework.kafka', name: 'spring-kafka-test', version: '2.0.0.RELEASE'
 
 }
 
