--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,52 @@
+# config context path to "/" by setting an empty string
+server:
+  servlet:
+    context-path:
 
+# JACKSON
+spring:
+  thymeleaf:
+    cache: false
+  jackson:
+    serialization:
+      INDENT_OUTPUT: true
+
+  mvc:
+      view:
+          prefix: /WEB-INF/views/
+          suffix: .jsp
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/und
+    username: postgres
+    password:  postgres
+
+security:
+  header:
+    token: Authorization
+    username: UserName
+  secret: mySecret
+  expiration: 604800
+  route:
+    authentication:
+      path: auth
+      refresh: refresh
+
+kafka:
+  ip: 192.168.0.107
+  port: 9092
+  topic:
+    event: Event-API
+    userevent: User-Event-API
+    email: Email
+    sms: SMS
+#logging:
+#  level:
+#    org.springframework:
+#      security: DEBUG
+
+encryption-decryption:
+  key:
+    default: DaO1TXt5B0R92Yys
+    unsubscribe: TaO5T01R9BXt2yYS
 
