--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext.kotlin_version = '1.1.51'
-    ext.spring_boot_version = '2.0.0.M5'
+    ext.spring_boot_version = '2.0.0.M3'
     repositories {
         mavenLocal()
         mavenCentral()
@@ -59,7 +59,7 @@ ext {
     javaxElVersion = '2.2.1-b04'
     bitWalkerUagentVersion = '1.20'
     kotlinVersion = '1.1.51'
-    springbootVersion = '2.0.0.M5'
+    springbootVersion = '2.0.0.M3'
     aspectjVersion = '1.8.7'
     jsonPathVersion = '2.1.0'
     swaggerVersion = '2.7.0'
@@ -133,8 +133,8 @@ dependencies {
             "org.springframework.boot:spring-boot-actuator",
             "org.springframework.boot:spring-boot-starter-mobile",
             "org.springframework.boot:spring-boot-starter-data-mongodb",
-            "org.aspectj:aspectjrt:$aspectjVersion",
-            "org.aspectj:aspectjweaver:$aspectjVersion",
+            "org.aspectj:aspectjrt",
+            "org.aspectj:aspectjweaver",
             "org.postgresql:postgresql:$pgDriverVersion",
             "io.springfox:springfox-swagger2:$swaggerVersion",
             "io.springfox:springfox-swagger-ui:$swaggerVersion",
@@ -145,7 +145,7 @@ dependencies {
             "org.flywaydb:flyway-core:$flywayVersion",
 
     )
-    compile ("com.und:auth-client:0.3.0-SNAPSHOT")
+    compile ("com.und:auth-client:0.4.0-SNAPSHOT")
     compile('org.springframework.cloud:spring-cloud-starter-config')
     compile('org.springframework.cloud:spring-cloud-config-client')
     compile('org.springframework.cloud:spring-cloud-starter-eureka:2.0.0.M2')
@@ -161,7 +161,7 @@ dependencies {
 
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Finchley.M3"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Finchley.M2"
     }
 }
 
