--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,12 @@
 server:
   servlet:
     context-path:
+#  port: 8443
+#  ssl:
+#    key-store: ~/keystore.p12
+#    key-store-password: mypassword
+#    keyStoreType: PKCS12
+#    keyAlias: tomcat
 
 # JACKSON
 spring:
@@ -17,7 +23,8 @@ spring:
           suffix: .jsp
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/und
+    url: jdbc:postgresql://127.0.0.1:5432/und
+    #jdbc:postgresql://103.227.68.166:5432/und
     username: postgres
     password:  postgres
 
@@ -33,8 +40,8 @@ security:
       refresh: refresh
 
 kafka:
-  ip: 192.168.0.107
-  port: 9092
+  ip: 103.227.68.166
+  port: 6667
   topic:
     event: Event-API
     userevent: User-Event-API
@@ -50,3 +57,15 @@ encryption-decryption:
     default: DaO1TXt5B0R92Yys
     unsubscribe: TaO5T01R9BXt2yYS
 
+
+#config on dev server
+#export EUREKA_IP=192.168.0.109
+#export EUREKA_PORT=8761
+#export REDIS_IP=192.168.0.109
+#export REDIS_PORT=6379
+#export POSTGRES_IP=192.168.0.109
+#export POSTGRES_PORT=5432
+#export KAFKA_IP=192.168.0.109
+#export KAFKA_PORT=6667
+#export MONGO_IP=192.168.0.109
+#export MONGO_PORT=27018
