--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -20,7 +20,7 @@ eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
-    service-url: http://localhost:8761/eureka
+    service-url: http://103.227.68.166:8761/eureka
       #discovery:
        # enabled: true
         #service-id: auth-service
