--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,7 @@
     "@angular/platform-browser-dynamic": "^5.0.4",
     "@angular/platform-server": "^5.0.4",
     "@angular/router": "^5.0.4",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.0",
     "zone.js": "^0.8.4"
