--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,10 @@
     "@angular/platform-server": "^5.0.4",
     "@angular/router": "^5.0.4",
     "bootstrap": "^4.0.0-beta.2",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.0",
+    "tinymce": "^4.7.4",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
