--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.4",
+    "@angular/animations": "^5.2.0",
+    "@angular/cdk": "^5.0.4",
     "@angular/common": "^5.0.4",
     "@angular/compiler": "^5.0.4",
     "@angular/compiler-cli": "^5.0.4",
     "@angular/core": "^5.0.4",
     "@angular/forms": "^5.0.4",
     "@angular/http": "^5.0.4",
+    "@angular/material": "^5.0.4",
     "@angular/platform-browser": "^5.0.4",
     "@angular/platform-browser-dynamic": "^5.0.4",
     "@angular/platform-server": "^5.0.4",
@@ -28,6 +30,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "^5.5.0",
     "tinymce": "^4.7.4",
     "zone.js": "^0.8.4"
