--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,8 @@
     "bootstrap": "^4.0.0-beta.2",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
+    "mydaterangepicker": "^4.2.0",
+    "ng2-daterangepicker": "^2.0.12",
     "rxjs": "^5.5.0",
     "tinymce": "^4.7.4",
     "zone.js": "^0.8.4"
