--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
+    "@angular/animations": "^5.2.2",
     "@angular/cdk": "^5.0.4",
     "@angular/common": "^5.0.4",
     "@angular/compiler": "^5.0.4",
@@ -27,12 +27,15 @@
     "@angular/platform-browser-dynamic": "^5.0.4",
     "@angular/platform-server": "^5.0.4",
     "@angular/router": "^5.0.4",
+    "angular2-multiselect-dropdown": "^2.3.0",
     "bootstrap": "^4.0.0-beta.2",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
-    "mydaterangepicker": "^4.2.0",
-    "ng2-daterangepicker": "^2.0.12",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "mydaterangepicker": "^4.2.0",
+    "ng-pick-datetime": "^5.1.2",
+    "ng2-daterangepicker": "^2.0.12",
     "rxjs": "^5.5.0",
     "tinymce": "^4.7.4",
     "zone.js": "^0.8.4"
