--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,9 +32,11 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
     "mydaterangepicker": "^4.2.0",
     "ng-pick-datetime": "^5.1.2",
     "ng2-daterangepicker": "^2.0.12",
+    "ng2-select2": "^1.0.0-beta.11",
     "rxjs": "^5.5.0",
     "tinymce": "^4.7.4",
     "zone.js": "^0.8.4"
