--- a/build.gradle
+++ b/build.gradle
@@ -114,6 +114,7 @@ dependencies {
     compile("org.springframework.kafka:spring-kafka")
     compile("org.springframework.kafka:spring-kafka-test")
     compile ("com.und:auth-client:0.4.0-SNAPSHOT")
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('org.postgresql:postgresql')
     testCompile('org.springframework.boot:spring-boot-starter-test') {
