--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,71 +1,16 @@
-## config context path to "/" by setting an empty string
-#server:
-#  servlet:
-#    context-path:
-##  port: 8443
-##  ssl:
-##    key-store: ~/keystore.p12
-##    key-store-password: mypassword
-##    keyStoreType: PKCS12
-##    keyAlias: tomcat
-#
-## JACKSON
-#spring:
-#  thymeleaf:
-#    cache: false
-#  jackson:
-#    serialization:
-#      INDENT_OUTPUT: true
-#
-#  mvc:
-#      view:
-#          prefix: /WEB-INF/views/
-#          suffix: .jsp
-#
-#  datasource:
-#    url: jdbc:postgresql://127.0.0.1:5432/und
-#    #jdbc:postgresql://103.227.68.166:5432/und
-#    username: postgres
-#    password:  postgres
-#
-#security:
-#  header:
-#    token: Authorization
-#    username: UserName
-#  secret: mySecret
-#  expiration: 604800
-#  route:
-#    authentication:
-#      path: auth
-#      refresh: refresh
-#
-#kafka:
-#  ip: 103.227.68.166
-#  port: 6667
-#  topic:
-#    event: Event-API
-#    userevent: User-Event-API
-#    email: Email
-#    sms: SMS
-##logging:
-##  level:
-##    org.springframework:
-##      security: DEBUG
-#
-#encryption-decryption:
-#  key:
-#    default: DaO1TXt5B0R92Yys
-#    unsubscribe: TaO5T01R9BXt2yYS
-#
-#
-##config on dev server
-##export EUREKA_IP=192.168.0.109
-##export EUREKA_PORT=8761
-##export REDIS_IP=192.168.0.109
-##export REDIS_PORT=6379
-##export POSTGRES_IP=192.168.0.109
-##export POSTGRES_PORT=5432
-##export KAFKA_IP=192.168.0.109
-##export KAFKA_PORT=6667
-##export MONGO_IP=192.168.0.109
-##export MONGO_PORT=27018
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 5000
+        readTimeout: 5000
+        loggerLevel: full
+        errorDecoder: com.und.feign.AuthFeignErrorDecoder
+        #retryer: com.example.SimpleRetryer
+        #requestInterceptors:
+        #  - com.example.FooRequestInterceptor
+        #  - com.example.BarRequestInterceptor
+        #decode404: false
+        #encoder: com.example.SimpleEncoder
+        #decoder: com.example.SimpleDecoder
+        #contract: com.example.SimpleContract
