--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^5.0.4",
     "@angular/platform-server": "^5.0.4",
     "@angular/router": "^5.0.4",
+    "angular-mentions": "^0.8.0",
     "bootstrap": "^4.0.0-beta.2",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
