--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "ng2-daterangepicker": "^2.0.12",
     "ng2-select2": "^1.0.0-beta.11",
     "ng2-timezone-selector": "^0.2.3",
+    "ngx-clipboard": "^10.0.0",
     "rxjs": "^5.5.0",
     "tinymce": "^4.7.4",
     "zone.js": "^0.8.4"
