--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,9 @@
     "ng-pick-datetime": "^5.1.2",
     "ng2-daterangepicker": "^2.0.12",
     "ng2-select2": "^1.0.0-beta.11",
+    "popper.js": "^1.14.1",
     "rxjs": "^5.5.0",
+    "select2": "^4.0.6-rc.1",
     "tinymce": "^4.7.4",
     "zone.js": "^0.8.4"
   },
