--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,8 +38,9 @@
     "ng2-daterangepicker": "^2.0.12",
     "ng2-select2": "^1.0.0-beta.11",
     "ng2-timezone-selector": "^0.2.3",
+    "ngx-bootstrap": "^2.0.3",
     "ngx-clipboard": "^10.0.0",
-    "ngx-intl-tel-input": "^1.0.6",
+    "google-libphonenumber": "^2.0.15",
     "popper.js": "^1.14.1",
     "rxjs": "^5.5.0",
     "select2": "^4.0.6-rc.1",
