--- a/build.gradle
+++ b/build.gradle
@@ -86,9 +86,6 @@ jar {
     baseName = 'clientpanel'
     version = '0.2.0'
 }
-
-
-
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-starter-aop')
@@ -113,10 +110,17 @@ dependencies {
     compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
     compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.4.1'
 
-    compile ("com.und:auth-client:0.4.0-SNAPSHOT")
+    compile("com.und:auth-client:0.4.0-SNAPSHOT")
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
     // https://mvnrepository.com/artifact/com.github.danielwegener/logback-kafka-appender
     compile group: 'com.github.danielwegener', name: 'logback-kafka-appender', version: '0.2.0-RC1'
+
+    compile("io.springfox:springfox-swagger2:$swaggerVersion")
+    compile("io.springfox:springfox-swagger-ui:$swaggerVersion")
+    compile group: 'nl.martijndwars', name: 'web-push', version: '3.0.1'
+    compile group: 'de.bytefish.fcmjava', name: 'fcmjava-core', version: '2.4'
+    compile group: 'de.bytefish.fcmjava', name: 'fcmjava-client', version: '2.4'
+    compile group: 'org.codehaus.janino', name: 'janino', version: '3.0.8'
 
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('org.postgresql:postgresql')
@@ -126,14 +130,14 @@ dependencies {
     testCompile('org.springframework.security:spring-security-test')
     testCompile group: 'com.nhaarman', name: 'mockito-kotlin', version: '1.5.0'
     testCompile 'org.mockito:mockito-core:1.+'
-    compile("io.springfox:springfox-swagger2:$swaggerVersion")
-    compile("io.springfox:springfox-swagger-ui:$swaggerVersion")
-    compile group: 'nl.martijndwars', name: 'web-push', version: '3.0.1'
-    compile group: 'de.bytefish.fcmjava', name: 'fcmjava-core', version: '2.4'
-    compile group: 'de.bytefish.fcmjava', name: 'fcmjava-client', version: '2.4'
-    compile group: 'org.codehaus.janino', name: 'janino', version: '3.0.8'
+    testCompile group: 'org.jetbrains.spek', name: 'spek-api', version: '1.1.5'
+    testCompile group: 'org.jetbrains.spek', name: 'spek-junit-platform-engine', version: '1.1.5'
+
 
 }
+
+
+
 
 
 
