--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,10 +27,12 @@
     "@angular/platform-server": "^5.0.4",
     "@angular/router": "^5.0.4",
     "angular-mentions": "^0.8.0",
+    "angular2-recaptcha": "^0.6.0",
     "bootstrap": "^4.0.0-beta.2",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "google-libphonenumber": "^2.0.15",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "mydaterangepicker": "^4.2.0",
@@ -40,7 +42,6 @@
     "ng2-timezone-selector": "^0.2.3",
     "ngx-bootstrap": "^2.0.3",
     "ngx-clipboard": "^10.0.0",
-    "google-libphonenumber": "^2.0.15",
     "popper.js": "^1.14.1",
     "rxjs": "^5.5.0",
     "select2": "^4.0.6-rc.1",
