--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,11 +37,11 @@
     "jquery": "^3.3.1",
     "mydaterangepicker": "^4.2.0",
     "ng-pick-datetime": "^5.1.2",
+    "ng2-charts": "^1.6.0",
     "ng2-daterangepicker": "^2.0.12",
     "ng2-select2": "^1.0.0-beta.11",
     "ng2-timezone-selector": "^0.2.3",
     "ngx-bootstrap": "^2.0.3",
-    "ngx-clipboard": "^10.0.0",
     "popper.js": "^1.14.1",
     "rxjs": "^5.5.0",
     "select2": "^4.0.6-rc.1",
