--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,7 @@ feign:
         readTimeout: 5000
         loggerLevel: full
         errorDecoder: com.und.feign.AuthFeignErrorDecoder
+
+spring:
+  jpa:
+    show-sql: true
