--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -4,6 +4,7 @@ spring:
       uri: http://nestros.com:8888
       enabled: true
       name: client-panel
+      profile: shiv
   application:
     name: client-panel
   mvc:
